Change SearchOptionContext to AreaContext and Add Types, Consts

--- a/ios/TravelApp/Info.plist
+++ b/ios/TravelApp/Info.plist
@@ -33,7 +33,7 @@
 			<key>api.visitkorea.or.kr</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<false/>
+				<true/>
 			</dict>
 			<key>localhost</key>
 			<dict>
